--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.nuxeo.ecm.platform</groupId>
-    <artifactId>nuxeo-features-parent</artifactId>
+    <groupId>org.nuxeo</groupId>
+    <artifactId>nuxeo-addons-parent</artifactId>
     <version>5.5-SNAPSHOT</version>
   </parent>
 
+  <groupId>org.nuxeo.ecm.platform</groupId>
   <artifactId>nuxeo-filesystem-connectors</artifactId>
   <name>Nuxeo Filesystem Connectors</name>
   <packaging>pom</packaging>
@@ -19,6 +20,35 @@
     <module>nuxeo-webdav</module>
     <module>nuxeo-platform-wi-backend</module>
   </modules>
+
+  <repositories>
+    <repository>
+      <id>public</id>
+      <url>http://maven.nuxeo.org/nexus/content/groups/public</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>public-snapshot</id>
+      <url>http://maven.nuxeo.org/nexus/content/groups/public-snapshot</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
+  <scm>
+    <connection>scm:hg:http://hg.nuxeo.org/addons/nuxeo-filesystem-connectors</connection>
+    <developerConnection>scm:hg:https://hg.nuxeo.org/addons/nuxeo-filesystem-connectors</developerConnection>
+    <url>http://hg.nuxeo.org/addons/nuxeo-filesystem-connectors</url>
+  </scm>
 
 </project>
 
