--- a/pom.xml
+++ b/pom.xml
@@ -3,21 +3,18 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.nuxeo.ecm.platform</groupId>
-    <artifactId>nuxeo-dm-parent</artifactId>
+    <groupId>org.nuxeo</groupId>
+    <artifactId>nuxeo-addons-parent</artifactId>
     <version>5.5-SNAPSHOT</version>
   </parent>
 
+  <groupId>org.nuxeo.ecm.platform</groupId>
   <artifactId>nuxeo-platform-error-web</artifactId>
   <name>Nuxeo web error addon</name>
   <description>
     Addon performing errors on the web side for automated testing of the
     exception handling system
   </description>
-
-  <properties>
-    <nuxeo.version>${project.version}</nuxeo.version>
-  </properties>
 
   <dependencies>
     <dependency>
@@ -27,12 +24,10 @@
     <dependency>
       <groupId>org.nuxeo.ecm.webengine</groupId>
       <artifactId>nuxeo-webengine-core</artifactId>
-      <version>${nuxeo.version}</version>
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-ui-web</artifactId>
-      <version>${nuxeo.version}</version>
     </dependency>
 
     <dependency>
@@ -103,13 +98,9 @@
   </developers>
 
   <scm>
-    <connection>
-      scm:hg:http://hg.nuxeo.org/addons/nuxeo-platform-error-web
-    </connection>
-    <developerConnection>
-      scm:hg:https://hg.nuxeo.org/addons/nuxeo-platform-error-web
-    </developerConnection>
-    <url>http://trac.nuxeo.org/nuxeo/browser/nuxeo_platform_error</url>
+    <connection>scm:hg:http://hg.nuxeo.org/addons/nuxeo-platform-error-web</connection>
+    <developerConnection>scm:hg:https://hg.nuxeo.org/addons/nuxeo-platform-error-web</developerConnection>
+    <url>http://hg.nuxeo.org/addons/nuxeo-platform-error-web</url>
   </scm>
 
 </project>
