--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.nuxeo.ecm.platform</groupId>
-    <artifactId>nuxeo-dm-parent</artifactId>
+    <groupId>org.nuxeo</groupId>
+    <artifactId>nuxeo-addons-parent</artifactId>
     <version>5.5-SNAPSHOT</version>
   </parent>
 
+  <groupId>org.nuxeo.ecm.platform</groupId>
   <artifactId>nuxeo-platform-forms-layout-demo</artifactId>
   <name>Nuxeo forms layout demo addon</name>
   <description>Addon defining sample widgets for demo and tests.</description>
-
-  <properties>
-    <nuxeo.version>${project.version}</nuxeo.version>
-  </properties>
 
   <profiles>
     <profile>
@@ -120,13 +116,33 @@
     </developer>
   </developers>
 
+  <repositories>
+    <repository>
+      <id>public</id>
+      <url>http://maven.nuxeo.org/nexus/content/groups/public</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>public-snapshot</id>
+      <url>http://maven.nuxeo.org/nexus/content/groups/public-snapshot</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <scm>
-    <connection>
-      scm:hg:http://hg.nuxeo.org/addons/nuxeo-platform-forms-layout-demo
-    </connection>
-    <developerConnection>
-      scm:hg:https://hg.nuxeo.org/addons/nuxeo-platform-forms-layout-demo
-    </developerConnection>
+    <connection>scm:hg:http://hg.nuxeo.org/addons/nuxeo-platform-forms-layout-demo</connection>
+    <developerConnection>scm:hg:https://hg.nuxeo.org/addons/nuxeo-platform-forms-layout-demo</developerConnection>
+    <url>http://hg.nuxeo.org/addons/nuxeo-platform-forms-layout-demo</url>
   </scm>
 
 </project>
