NXP-7704 - Pull up addons dependencyManagement from nuxeo-ecm to addons-parent and distributions ones to nuxeo-distribution

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>nuxeo-features-parent</artifactId>
-    <groupId>org.nuxeo.ecm.platform</groupId>
+    <groupId>org.nuxeo</groupId>
+    <artifactId>nuxeo-addons-parent</artifactId>
     <version>5.5-SNAPSHOT</version>
   </parent>
 
+  <groupId>org.nuxeo.ecm.platform</groupId>
   <artifactId>nuxeo-platform-shibboleth-groups-web</artifactId>
   <name>Nuxeo Platform Shibboleth Groups Web</name>
   <description>Nuxeo Platform Shibboleth Groups Web</description>
@@ -156,5 +157,34 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <repositories>
+    <repository>
+      <id>public</id>
+      <url>http://maven.nuxeo.org/nexus/content/groups/public</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>public-snapshot</id>
+      <url>http://maven.nuxeo.org/nexus/content/groups/public-snapshot</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
+  <scm>
+    <connection>scm:hg:http://hg.nuxeo.org/addons/nuxeo-platform-shibboleth-groups-web</connection>
+    <developerConnection>scm:hg:https://hg.nuxeo.org/addons/nuxeo-platform-shibboleth-groups-web</developerConnection>
+    <url>http://hg.nuxeo.org/addons/nuxeo-platform-shibboleth-groups-web</url>
+  </scm>
 
 </project>
