NXP-7619: start to split css for a better modularity between pages

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-backgrounds.properties
@@ -1,4 +1,4 @@
-color.major.light=#e6f6ff
+color.major.light=#e6f1ff
 color.major.medium=#cfecff
 color.major.strong=#adf
 color.major.stronger=#4e9ae1
@@ -15,5 +15,5 @@ button=#dfdfdf
 info=#fff1c6
 warning=#ffc3a6
 
-header=#101b3f
-footer=#101b3f
+header=#332e2e
+footer=#332e2e
