Fix test dependencies

--- a/nuxeo-opensocial-gadgets-core/pom.xml
+++ b/nuxeo-opensocial-gadgets-core/pom.xml
@@ -49,8 +49,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.nuxeo.runtime</groupId>
-      <artifactId>nuxeo-runtime-test</artifactId>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-storage-sql-test</artifactId>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
