--- a/nuxeo-opensocial-server/pom.xml
+++ b/nuxeo-opensocial-server/pom.xml
@@ -26,6 +26,10 @@
       <artifactId>nuxeo-launcher-commons</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-test</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-usermanager-api</artifactId>
     </dependency>
