--- a/nuxeo-distribution-dm/pom.xml
+++ b/nuxeo-distribution-dm/pom.xml
@@ -165,6 +165,10 @@
       <artifactId>nuxeo-opensocial-gadgets</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.google.code.guice</groupId>
+      <artifactId>guice-internal</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-admin-center-oauth-opensocial</artifactId>
     </dependency>
