NXP-7767: fix avatar uploading

--- a/build.xml
+++ b/build.xml
@@ -26,10 +26,7 @@
   <target name="build" depends="build-unix,build-windows" description="Build Nuxeo User Center"/>
   <target name="build-unix" if="osfamily-unix">
     <exec executable="mvn" failonerror="true">
-      <arg value="clean" />
-      <arg value="install" />
-      <arg value="-Dmaven.test.skip=true" />
-      <arg value="${mvn.opts}" />
+      <arg line="clean install -Dmaven.test.skip=true ${mvn.opts}"/>
     </exec>
   </target>
   <target name="build-windows" if="osfamily-windows">
