NXP-7704 - add missing dep on nuxeo-runtime-test

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
       <artifactId>json-lib</artifactId>
       <classifier>jdk15</classifier>
     </dependency>
+
+    <dependency>
+      <groupId>org.nuxeo.runtime</groupId>
+      <artifactId>nuxeo-runtime-test</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
