--- a/nuxeo-platform-login-cas2/pom.xml
+++ b/nuxeo-platform-login-cas2/pom.xml
@@ -50,6 +50,10 @@
     </dependency>
 
     <dependency>
+      <groupId>org.nuxeo.runtime</groupId>
+      <artifactId>nuxeo-runtime-test</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-usermanager-api</artifactId>
       <scope>test</scope>
