NXP-7619: Styles and palettes precision for more modularity with themes

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-backgrounds.properties
@@ -3,14 +3,18 @@ color.major.medium=#cfecff
 color.major.strong=#adf
 color.major.stronger=#4e9ae1
 
-color.minor.light=#bbb
-color.minor.medium=#bbb
-color.minor.strong=#bbb
+color.minor.light=#fff3d4
+color.minor.medium=#ffec86
+color.minor.strong=#ffdf2e
 
 neutral.lighter=#f6f6f6
+neutral.light=#f1f2f3
 neutral.medium=#eeeff0
+neutral.strong=#c7c7c7
+neutral.stronger=#8b8b8b
 
 button=#dfdfdf
+button.disabled=#f6f6f6
 
 info=#fff1c6
 warning=#ffc3a6
