NXP-7836: Clean styles, update icons

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-colors.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-colors.properties
@@ -5,8 +5,8 @@ gray.medium=#9a9a9a
 gray.dark=#777
 black=#000
 
-title.major=#5c5c5c
-title.minor=#848484
+title.major=#000
+title.minor=#6f6f6f
 
 link=#0079a6
 link.hover=#00416b
